tests/snapshots/regression/semantic_types__collections__heterogeneous_array_error.snap
---
source: tests/integration/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/semantic_types/collections/heterogeneous_array_error.flx
exit_code: 1

[ 1 of 18] Compiling  Add
[ 2 of 18] Compiling  Assert
[ 3 of 18] Compiling  Debug
[ 4 of 18] Compiling  Array
[ 5 of 18] Compiling  List
[ 6 of 18] Compiling  Either
[ 7 of 18] Compiling  Eq
[ 8 of 18] Compiling  IO
[ 9 of 18] Compiling  Math
[10 of 18] Compiling  Num
[11 of 18] Compiling  Numeric
[12 of 18] Compiling  Option
[13 of 18] Compiling  Ord
[14 of 18] Compiling  Primops
[15 of 18] Compiling  Semigroup
[16 of 18] Compiling  Show
[17 of 18] Compiling  String
• 2 errors • tests/fixtures/semantic_types/collections/heterogeneous_array_error.flx
error[E430]: Could Not Infer Concrete Type

Could not determine a concrete type for `main` at the public function signature. Inferred type: `() -> Array<_>`.

  tests/fixtures/semantic_types/collections/heterogeneous_array_error.flx:1:1
  |
1 | fn main() {
  | ^^^^^^^^^

Hint:
  Add a type annotation: e.g. `fn main(x: Int, y: Int): Int`


error[E300]: Type Mismatch

I found a type mismatch.

  tests/fixtures/semantic_types/collections/heterogeneous_array_error.flx:2:10
  |
2 |     [|1, "x"|]
  |          ^^^
  |          --- this expression has type `String`

  |          --- this type mismatch is reported here

Note:
  expected type: Int
  found type: String
  the conflicting types meet at this expression

Help:
  These two types are not compatible.

Found 2 errors.
