tests/snapshots/regression/semantic_types__collections__shapes.snap
---
source: tests/integration/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/semantic_types/collections/shapes.flx
exit_code: 0

3
3
9
4
[ 1 of 18] Compiling  Add
[ 2 of 18] Compiling  Assert
[ 3 of 18] Compiling  Debug
[ 4 of 18] Compiling  Array
[ 5 of 18] Compiling  List
[ 6 of 18] Compiling  Either
[ 7 of 18] Compiling  Eq
[ 8 of 18] Compiling  IO
[ 9 of 18] Compiling  Math
[10 of 18] Compiling  Num
[11 of 18] Compiling  Numeric
[12 of 18] Compiling  Option
[13 of 18] Compiling  Ord
[14 of 18] Compiling  Primops
[15 of 18] Compiling  Semigroup
[16 of 18] Compiling  Show
[17 of 18] Compiling  String
[18 of 18] Compiling  shapes
[cfg→vm] Running via CFG → bytecode VM backend...
